# digilogic-routing

./: Cargo.toml  LICENSE.md  build.rs  cbindgen.toml  routing.h
benches/: build_graph.rs
benches/data/: graph.rs
src/: ffi.rs  graph.rs  lib.rs  path_finding.rs  routing.rs  segment_tree.rs  test.rs
src/test/: grid.rs  pathfinding.rs
test_data/: graph.rs  svg.js
