[package]
name = "digilogic_routing"
version = "0.1.0"
edition = "2021"
authors = ["Mathis Rech"]
license = "Apache-2.0"

[lib]
crate-type = ["rlib", "staticlib"]

[[bench]]
name = "build_graph"
harness = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
priority-queue = "2.0.2"
ahash = { version = "0.8.11", features = ["serde"] }
rayon = "1.10.0"
num_cpus = "1.16.0"
thread_local = "1.1.8"
bitflags = "2.5.0"
serde = "1.0.202"
rmp-serde = "1.3.0"

[dev-dependencies]
criterion = "0.5.1"
svg = "0.17.0"
